# internal/api/oas_response_decoders_gen.go
@@ -381,7 +381,7 @@ func decodeAdminCreateCourseResponse(resp *http.Response) (res AdminCreateCourse
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminCreateCourseCategoryResponse(resp *http.Response) (res AdminCreateCourseCategoryRes, _ error) {
+func decodeAdminCreateCourseCategoryResponse(resp *http.Response) (res *CourseCategory, _ error) {
 	switch resp.StatusCode {
 	case 201:
 		// Code 201.
@@ -413,50 +413,6 @@ func decodeAdminCreateCourseCategoryResponse(resp *http.Response) (res AdminCrea
 					Err:         err,
 				}
 				return res, err
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
 			}
 			return &response, nil
 		default:
@@ -1433,7 +1389,7 @@ func decodeAdminGetCourseResponse(resp *http.Response) (res AdminGetCourseRes, _
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminGetCourseCategoryResponse(resp *http.Response) (res AdminGetCourseCategoryRes, _ error) {
+func decodeAdminGetCourseCategoryResponse(resp *http.Response) (res *CourseCategory, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -1450,41 +1406,6 @@ func decodeAdminGetCourseCategoryResponse(resp *http.Response) (res AdminGetCour
 			d := jx.DecodeBytes(buf)
 
 			var response CourseCategory
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 404:
-		// Code 404.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response NotFoundError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
@@ -3559,7 +3480,7 @@ func decodeAdminUpdateCourseResponse(resp *http.Response) (res AdminUpdateCourse
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminUpdateCourseCategoryResponse(resp *http.Response) (res AdminUpdateCourseCategoryRes, _ error) {
+func decodeAdminUpdateCourseCategoryResponse(resp *http.Response) (res *CourseCategory, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -3591,50 +3512,6 @@ func decodeAdminUpdateCourseCategoryResponse(resp *http.Response) (res AdminUpda
 					Err:         err,
 				}
 				return res, err
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
 			}
 			return &response, nil
 		default:
