# internal/api/oas_response_encoders_gen.go
@@ -134,35 +134,17 @@ func encodeAdminCreateCourseResponse(response AdminCreateCourseRes, w http.Respo
 	}
 }
 
-func encodeAdminCreateCourseCategoryResponse(response AdminCreateCourseCategoryRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *CourseCategory:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(201)
+func encodeAdminCreateCourseCategoryResponse(response *CourseCategory, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(201)
 
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *ValidationError:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(422)
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
 	}
+
+	return nil
 }
 
 func encodeAdminCreateCourseLandingPageResponse(response AdminCreateCourseLandingPageRes, w http.ResponseWriter, span trace.Span) error {
@@ -535,35 +517,17 @@ func encodeAdminGetCourseResponse(response AdminGetCourseRes, w http.ResponseWri
 	}
 }
 
-func encodeAdminGetCourseCategoryResponse(response AdminGetCourseCategoryRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *CourseCategory:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
+func encodeAdminGetCourseCategoryResponse(response *CourseCategory, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
 
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *NotFoundError:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(404)
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
 	}
+
+	return nil
 }
 
 func encodeAdminGetCourseLandingPageResponse(response AdminGetCourseLandingPageRes, w http.ResponseWriter, span trace.Span) error {
@@ -1232,35 +1196,17 @@ func encodeAdminUpdateCourseResponse(response AdminUpdateCourseRes, w http.Respo
 	}
 }
 
-func encodeAdminUpdateCourseCategoryResponse(response AdminUpdateCourseCategoryRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *CourseCategory:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
+func encodeAdminUpdateCourseCategoryResponse(response *CourseCategory, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
 
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *ValidationError:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(422)
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
 	}
+
+	return nil
 }
 
 func encodeAdminUpdateCourseLandingPageResponse(response AdminUpdateCourseLandingPageRes, w http.ResponseWriter, span trace.Span) error {
